<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_macchina" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ore_funzionamento" />

        <TextView
            android:id="@+id/oreFunzionamentoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pezzi_prodotti" />

        <TextView
            android:id="@+id/pezziProdottiTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/velocita" />

        <TextView
            android:id="@+id/velocitaTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energia_assorbita" />

        <TextView
            android:id="@+id/energiaAssorbitaTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_motore" />

        <TextView
            android:id="@+id/tempMotoreTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_slitta" />

        <TextView
            android:id="@+id/tempSlittaTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_number" />
    </LinearLayout>
    <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manutenzione" />

            <TextView
                android:id="@+id/manutenzioneTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_number" />
        </LinearLayout>
     -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codice_allarme" />

        <TextView
            android:id="@+id/codiceAllarmeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/refreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/refresh" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>